css/style.css
/* ... */
.nav-button:hover {
    background-position: left bottom;
    color: white;
    transition: all .3s ease-out;
}

.logo {
    width: 45px;
}

.nav-links {
    width: 300px;
    display: flex;
    justify-content: space-between;
}

.nav-item:hover {
    text-decoration: underline;
    cursor: pointer;
    color: black;
}

.nav-links a:not(.selected) {
    font-family: 'ClashDisplay-Regular';
    color: black;
}


.selected {
    font-family: 'ClashDisplay-Medium';
    font-weight: 500;
    text-decoration: underline;
    color: black;
}

/* Mobile display */
.burger {
    display: none;
}

.bar {
    display: block;
    width: 25px;
    height: 2px;
    margin: 5px auto;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: #101010;
}

/* MAIN SECTION STYLES */
main {
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 3fr 1fr;
}

.name-section {
    grid-area: 1 / 1 / 2 / 2;
}
.double-column { 
    grid-area: 1 / 2 / 3 / 3;
}
.double-column .contact-links { 
    background-color: #262626;
    display: flex;
    flex-direction: column;
    padding-top: 50px;
    padding-left: 50px; 
    height: 225px;
}
.tools { 
    grid-area: 2 / 1 / 3 / 2; 
    display: flex;
    background-color: #F1F2EF;
    max-width: 100%;
    max-height: 100%;
    height: 100%;
    align-items: center;
    padding-left: 80px;
}

.tools h3 {
    font-family: 'ClashDisplay-Regular';
    color: rgb(167, 167, 167);
    width: 200px;
    padding-right: 30px;
}

.name-section .titles h1 {
    font-family: 'ClashDisplay-Medium';
    font-weight: 500;
    font-size: 80px;
    padding-left: 80px;
    margin-bottom: 0;
    transition: all .2s ease-in-out;
}

.name-section .buttons .hire-button {
    color: white;
    background-color: #E34F26;
    font-family: 'Montserrat', sans-serif;
    font-size: 18px;
    padding: 15px;
    border: none;
    margin-left: 80px;
    cursor: pointer;
    transition: all 0.5s;
}

.name-section .buttons .hire-button:hover {
    background: transparent;
    border: 1px solid #E34F26;
    color: #E34F26;
}


.name-section .buttons .projects-button {
    color: black;
    border: 1px solid black;
    cursor: pointer;
    padding: 15px 19px;
    margin-left: 40px;
    font-family: 'Montserrat', sans-serif;
    font-size: 18px;
    background: linear-gradient(to right, black 50%, white 50%);
    background-size: 200% 100%;
    background-position: right bottom;
    transition: all .2s ease-in;
}

.name-section .buttons .projects-button:hover {
    background-position: left bottom;
    color: white;
    transition: all .3s ease-out;
}

.profile-pic {
    background-color: #DED0C0;
    height: 412px;
}

.profile-pic img {
    height: 370px;
    object-fit: fill;
    margin-bottom: -400px;
}

.titles {
    display: flex;
    align-items: flex-end;
}

.titles h1 {
    line-break: normal;
}

.titles h2 {
    background-color: rgb(61, 52, 139, .9);
    color: white;
    padding: 18px;
    border-radius: 100px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    margin-left: 25px;
    transition: all .2s ease-in-out;
}

.tools h3 {
    font-family: 'ClashDisplay-Regular';
}

.figma-icon {
    max-width: 100px;
    height: 60px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: white;
    box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15);
    border-radius: 100px;
    padding: 0 20px;
    margin: 0 20px;
}

.figma-icon p {
    font-family: 'Montserrat', sans-serif;
    font-size: 19px;
    padding-left: 13px;
}

.html-icon {
    max-width: 100px;
    height: 60px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: white;
    box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15);
    border-radius: 100px;
    padding-left: 30px;
    padding-right: 20px;
    margin: 0 20px;
}

.html-icon p {
    font-family: 'Montserrat', sans-serif;
    font-size: 19px;
    padding: 0 13px;
}

.css-icon {
    max-width: 100px;
    height: 60px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: white;
    box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15);
    border-radius: 100px;
    padding: 0 20px;
    margin: 0 20px;
}

.css-icon p {
    font-family: 'Montserrat', sans-serif;
    font-size: 19px;
    padding-left: 13px;
}

.wordpress-icon {
    max-width: 200px;
    height: 60px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: white;
    box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15);
    border-radius: 100px;
    padding: 0 20px;
    margin: 0 20px;
}

.wordpress-icon p {
    font-family: 'Montserrat', sans-serif;
    font-size: 19px;
    padding-left: 13px;
}

section.contact-links a {
    color: white;
    text-decoration: underline;
    font-family: 'Montserrat', sans-serif;
    font-size: 22px;
}


/* FOOTER */
footer {
    background: black;
    height: 50px;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
}

footer a {
    color: white;
    text-decoration: underline;
}

/* TABLET */
@media only screen and (max-width: 1150px) {
    section.tools {
        overflow-x: scroll;
    }
}
/* ... */

